# iot-system

./: .dockerignore  .gitignore  Cargo.toml  build.rs
agent/: .dockerignore  Cargo.toml  Dockerfile
agent/docker/: docker-compose.yml
crates/agent/: .gitignore  Cargo.toml  Dockerfile
crates/agent/configuration/: base.toml  local.toml  production.toml
crates/agent/docker/: docker-compose.yml
crates/agent/src/: config.rs  file_datasource.rs  main.rs
crates/edge/: .dockerignore  Cargo.toml  Dockerfile
crates/edge/configuration/: base.toml  production.toml
crates/edge/src/: config.rs  data_processing.rs  lib.rs  main.rs
crates/edge/src/adapter/: mod.rs
crates/edge/src/adapter/agent/: agent_mqtt_adapter.rs  mod.rs
crates/edge/src/adapter/hub/: hub_mqtt_adapter.rs  mod.rs
crates/hub/: Cargo.toml  Dockerfile
crates/hub/configuration/: base.toml  local.toml  production.toml
crates/hub/src/: config.rs  main.rs
crates/store/: .dockerignore  Cargo.toml  Dockerfile
crates/store/.sqlx/: query-85bcad5b86a59f82990a17b0bb897ffba60d47894438cedb4c6e9ff25c03672c.json  query-8dd55d4df72ea98cc1e6a2550f20ba4148d8f636ace7d445db532bd201cad17f.json  query-b18583b254d8c5e434ec8b0f9a8bcc01476411bb24ad4d6e17ed83471cfdd4b6.json  query-c719a9850ff33dbac97db8c1f1c259abee522af01290d805bd55a79b5d081f23.json  query-c99a5ca88935187c2dde97ca65841dced2f47f161e172de05d7265fd613c9c27.json  query-d2383f6fc23dd1afc8f720ab46e4565c18737f74c483b4648bcf75c7fad4df6f.json  query-db5a39ae041aea6b086501c22b125a24a03c45242ed523e0b929fc1d8976efab.json  query-fc44f70815a4cf13e13853458f850556707739ed3fa7f6f163ecf57c4e20f408.json
crates/store/configuration/: base.toml  local.toml
crates/store/docker/: docker-compose.yml
crates/store/migrations/: 20240222230019_add_processed_agent_data_table.sql
crates/store/src/: config.rs  error.rs  main.rs
crates/store/src/control/: grpc.rs  http.rs  mod.rs
crates/store/src/data/: model.rs  repo.rs
docker/: docker-compose.yml
hub/: Cargo.toml
proto/: iot_system.proto
src/: config.rs  domain.rs  lib.rs  mqtt.rs
store/: .gitignore  Cargo.toml  Dockerfile
store/.sqlx/: query-c719a9850ff33dbac97db8c1f1c259abee522af01290d805bd55a79b5d081f23.json  query-db5a39ae041aea6b086501c22b125a24a03c45242ed523e0b929fc1d8976efab.json
store/configuration/: local.toml
store/docker/: docker-compose.yml
store/src/: config.rs  service.rs
store/src/control/: ws.rs
store/src/data/: mod.rs
