[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "iot-system"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[features]
default = []
sqlx = ["dep:sqlx"]
utoipa = ["dep:utoipa", "dep:serde_json"]
redis = ["dep:redis"]
tonic = ["dep:tonic", "dep:prost"]
mqtt = ["dep:mqtt"]

[workspace.dependencies]
actix-web = "4.5"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "now",
] }
color-eyre = "0.6"
config = { version = "0.14", default-features = false, features = ["toml"] }
derive_more = "0.99"
mqtt = { package = "paho-mqtt", version = "0.12" }
prost = "0.12"
prost-types = "0.12"
redis = { version = "0.25", features = ["aio", "tokio-rustls-comp"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tonic = "0.11"
tonic-reflection = "0.11"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = { version = "0.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2", features = ["openapi_extensions", "chrono", "non_strict_integers"] }

[dependencies]
chrono.workspace = true
config.workspace = true
mqtt = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tonic = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
derive_more = { workspace = true, features = ["into", "constructor"] }
utoipa = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.11.0"
