[package]
name = "agent"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iot-system = { path = ".." }
chrono.workspace = true
color-eyre.workspace = true
paho-mqtt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
