[package]
name = "agent"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-read"]
async-read = ["dep:csv-async"]
sync-read = ["dep:csv"]

[dependencies]
iot-system = { path = "../..", features = ["mqtt"] }
chrono.workspace = true
color-eyre.workspace = true
mqtt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
csv = { version = "1.3.0", optional = true }
csv-async = { version = "1.3.0", features = ["tokio"], optional = true }
