[package]
name = "edge"
version.workspace = true
edition.workspace = true

[dependencies]
iot-system = { path = "../..", features = ["tonic", "mqtt"] }
async-trait.workspace = true
chrono.workspace = true
color-eyre.workspace = true
mqtt.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true