[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iot-system = { path = "../..", features = ["redis", "tonic"] }
actix-web.workspace = true
chrono.workspace = true
color-eyre.workspace = true
paho-mqtt.workspace = true
redis = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
