[package]
name = "hub"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iot-system = { path = "../..", features = ["redis", "tonic", "mqtt"] }
chrono.workspace = true
color-eyre.workspace = true
mqtt.workspace = true
redis = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
