[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-system = { path = "../..", features = ["sqlx", "utoipa", "tonic"] }
actix-web.workspace = true
actix-ws = "0.2.5"
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
derive_more = { workspace = true, features = ["constructor"] }
mime = "0.3.17"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
